--- a/index.html
+++ b/index.html
@@ -9,106 +9,163 @@
 </head>
 
 <body>
-    <div class="page">
-        <header class="header">
-            <a href="#" class="logo">
-                <img src="#" class="logo__img" alt="company_tourist_club">
-            </a>
-            <div class="contacts">
-                <a href="tel:88007003030" class="contacts__phone">8 800 700 30 30</a>
-            </div>
-            <div class="text_schedule">График работы</div>
-            <div class="schedule">
-                <img src="#" class="working_hours_and_break" alt="">
-                <div class="working_days">пн-вс: 09:00-20:00</div>
-                <div class="lunch_break">Обед: 14:00-14:30</div>
-            </div>
+    <div class="wrapper">
+        <div class="wrapper_content">
+            <header class="header">
+                <div class="container header__container">
+                    <a class="logo" href="#">
+                        <img class="logo__img" src="#" alt="logo company">
+                    </a>
+                    <nav class="menu">
+                        <ul class="menu__list">
+                            <li class="menu__item">
+                                <a href="#" class="menu__link">Главная</a>
+                            </li>
+                            <li class="menu__item">
+                                <a href="#" class="menu__link">Услуги</a>
+                            </li>
+                            <li class="menu__item">
+                                <a href="#" class="menu__link">Отзывы</a>
+                            </li>
+                        </ul>
+                    </nav>
+                    <address class="contacts">
+                        <a href="tel:+78007003030" class="contacts__phone">8 800 700 30 30</a>
+                        <div class="contacts__info">График работы</div>
+                    </address>
+                </div>
+            </header>
+        </div>
+        <main class="maincontent">
+            <section class="hello">
+                <div class="container hello__container">
+                    <h1 class="hello__title">Авторские туры по Азии</h1>
+                    <div class="hello__text">Открой для себя Азию</div>
+                    <a href="#" class="hello__button button">Подробнее</a>
+                </div>
 
-            <nav class="breadcrumbs">
-                <ul class="breadcrumbs__menu">
-                    <li class="breadcrumbs__item">
-                        <a href="#" class="breadcrumbs__link">Главная</a>
+            </section>
+            <section class="offers">
+                <div class="container offers__container">
+                    <h2 class="title title--fire">Горящие туры</h2>
+                    <ul class="offers__list">
+                        <li class="offers__item">
+                            <img src="#" alt="hot tour" class="offers__img">
+                            <div class="offers__content">
+                                <h4 class="offers__title">Таиланд</h4>
+                                <div class="offers__features">
+                                    <div class="offers__feature">
+                                        <img src="#" alt="calendar" class="offers__feature-icon">
+                                        <div class="offers__feature-text">7-12 ночей</div>
+                                    </div>
+                                    <div class="offers__feature">
+                                        <img src="#" alt="breacfast" class="offers__feature-icon">
+                                        <div class="offers__feature-text">Завтраки</div>
+                                    </div>
+                                </div>
+                                <p class="offers__text">Равным образом постоянное обеспечение нашей деятельности позволяет оценить значение систем массового участия.
+
+                                </p>
+                                <a href="" class="button--light">Смотреть</a>
+
+                            </div>
+                        </li>
+                        <li class="offers__item">
+                            <img src="#" alt="hot tour" class="offers__img">
+                            <div class="offers__content">
+                                <h4 class="offers__title">Бали</h4>
+                                <div class="offers__features">
+                                    <div class="offers__feature">
+                                        <img src="" alt="calendar" class="offers__feature-icon">
+                                        <div class="offers__feature-text">7-12 ночей</div>
+                                    </div>
+                                    <div class="offers__feature">
+                                        <img src="" alt="breacfast" class="offers__feature-icon">
+                                        <div class="offers__feature-text">Завтраки</div>
+                                    </div>
+                                </div>
+                                <p class="offers__text">Равным образом постоянное обеспечение нашей деятельности позволяет оценить значение систем массового участия.
+
+                                </p>
+                                <a href="#" class="button--light">Смотреть</a>
+
+                            </div>
+                        </li>
+                        <li class="offers__item">
+                            <img src="#" alt="hot tour" class="offers__img">
+                            <div class="offers__content">
+                                <h4 class="offers__title">Индонезия</h4>
+                                <div class="offers__features">
+                                    <div class="offers__feature">
+                                        <img src="" alt="calendar" class="offers__feature-icon">
+                                        <div class="offers__feature-text">7-12 ночей</div>
+                                    </div>
+                                    <div class="offers__feature">
+                                        <img src="" alt="breacfast" class="offers__feature-icon">
+                                        <div class="offers__feature-text">Завтраки</div>
+                                    </div>
+                                </div>
+                                <p class="offers__text">Равным образом постоянное обеспечение нашей деятельности позволяет оценить значение систем массового участия.
+
+                                </p>
+                                <a href="#" class="button--light">Смотреть</a>
+
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+            <section class="news"></section>
+            <section class="about"></section>
+        </main>
+        <footer class="footer">
+            <div class="container footer__container">
+                <a class="logo" href="#">
+                  <img class="logo__img" src="#" alt="logo company">
+                </a>
+                <nav class="menu">
+                    <ul class="menu__list">
+                        <li class="menu__item">
+                            <a href="#" class="menu__link">Главная</a>
+                        </li>
+                        <li class="menu__item">
+                             <a href="#" class="menu__link">Услуги</a>
+                        </li>
+                        <li class="menu__item">
+                             <a href="#" class="menu__link">Отзывы</a>
+                        </li>
+                    </ul>
+                </nav>
+                <address class="contacts">
+                    <a href="tel:+78007003030" class="contacts__phone">8 800 700 30 30</a>
+                    <div class="contacts__call">Бесплатный звонок по России</div>
+                </address>
+                <ul class="messenger">
+                    <li class="messenger__telegram">
+                        <a href="#" class="messenger__telegram">
+                            <img src="#" alt="telegram" class="messenger__telegram--img">
+                        </a>
                     </li>
-                    <li class="breadcrumbs__item">
-                        <a href="#" class="breadcrumbs__link">Услуги</a>
+                    <li class="messenger__vk">
+                        <a href="#" class="messenger__vk">
+                            <img src="#" alt="vk" class="messenger__vk--img">
+                        </a>
                     </li>
-                    <li class="breadcrumbs__item">
-                        <a href="#" class="breadcrumbs__link">Отзывы</a>
+                    <li class="messenger__facebook">
+                        <a href="#" class="messenger__facebook">
+                            <img src="#" alt="facebook" class="messenger__facebook--img">
+                        </a>
+                    </li>
+                    <li class="messenger__instagram">
+                        <a href="#" class="messenger__instagram">
+                            <img src="#" alt="instagram" class="messenger__instagram--img">
+                        </a>
                     </li>
                 </ul>
-            </nav>
-
-        </header>
-
-        <br>
-
-        <div class="route">
-            <div class="route_cover">
-                <h1>Авторские туры по Азии</h1>
             </div>
-            <div class="route_text">
-             Открой для себя Азию            
-            </div>
-            <div class="detalis">
-                <img class="details_img" src="#" alt="more_details">
-            </div>
-            <a class="detalis_link" href="#">Подробнее</a>
-        </div>
-        <br>
-
-        <div class="last_minute_tours">
-            <h2>Горячие туры</h2>
-        </div>
-        <br>
-        <div class="list_of_countries">
-            <div class="block">
-                <div class="block_element">
-                    <img class="Thailand_img" src="#" alt="Thailand_img">
-                    <h2>Таиланд</h2>
-                    <div class="time">7-12 ночей</div>
-                    <img class="time_img" src="#" alt="time_img">
-                    <div class="food">Завтраки</div>
-                    <img class="food_img" src="#" alt="food_img">
-                    <div class="block_element_text">Равным образом постоянное обеспечение нашей деятельности позволяет оценить значение систем массового участия.</div>
-                    <a class="look_thailand" href="#">Смотреть</a>
-                </div>
-                <br>
-                <div class="block_element">
-                    <img class="Bali_img" src="#" alt="Bali_img">
-                    <h2>Бали</h2>
-                    <div class="time">7-12 ночей</div>
-                    <img class="time_img" src="#" alt="time_img">
-                    <div class="food">Завтраки</div>
-                    <img class="food_img" src="#" alt="food_img">
-                    <div class="block_element_text">Равным образом постоянное обеспечение нашей деятельности позволяет оценить значение систем массового участия.</div>
-                    <a class="look_Bali" href="#">Смотреть</a>
-                </div>
-                <br>
-                <div class="block_element">
-                    <img class="Indonesia_img" src="#" alt="Indonesia_img">
-                    <h2>Индонезия</h2>
-                    <div class="time">7-12 ночей</div>
-                    <img class="time_img" src="#" alt="time_img">
-                    <div class="food">Завтраки</div>
-                    <img class="food_img" src="#" alt="food_img">
-                    <div class="block_element_text">Равным образом постоянное обеспечение нашей деятельности позволяет оценить значение систем массового участия.</div>
-                    <a class="look_Indonesia" href="#">Смотреть</a>
-                </div>
-            </div>
-
-        </div>
-
-
-
-
-
-
-
-
+        </footer>
     </div>
-
-
-
+  
 
 
 </body>
