--- a/index.html
+++ b/index.html
@@ -115,8 +115,67 @@
                     </ul>
                 </div>
             </section>
-            <section class="news"></section>
-            <section class="about"></section>
+            <section class="news">
+                <h3 class="title news__title">Новости и акции</h3>
+                <div class="container news__container">
+                    <ul class="news__list">
+                        <li class="news__item">
+                            <img src="#" alt="flight" class="news__img">
+                            <div class="news__date">Декабрь 2019</div>
+                            <h4 class="news__subtitle">Дешевые путевки на Новый Год!</h4>
+                            <div class="news__text">Проведи новый год в Тайланде</div>
+                        </li>
+                        <li class="news__item">
+                            <img src="#" alt="flight" class="news__img">
+                            <div class="news__date">Декабрь 2019</div>
+                            <h4 class="news__subtitle">Акция для серфенгистов!</h4>
+                            <div class="news__text">В сезон больших волн скидка на путевку в Тайланд на остров серфенгистов. Удачного пути!</div>
+                        </li>
+                    </ul>
+                    <div class="pagination">
+                        <div class="pagination__display">
+                            Страница 1 из 7
+                        </div>
+                        <ul class="pagination__list">
+                            <li class="pagination__item">
+                                <a href="#" class="pagination__link">1</a>
+                            </li>
+                            <li class="pagination__item">
+                                <a href="#" class="pagination__link">2</a>
+                            </li>
+                            <li class="pagination__item">
+                                <a href="#" class="pagination__link">3</a>
+                            </li>
+                            <li class="pagination__item">
+                                <a href="#" class="pagination__link">4</a>
+                            </li>
+                            <li class="pagination__item">
+                                <a href="#" class="pagination__link">5</a>
+                            </li>
+                            <li class="pagination__item">
+                                <a href="#" class="pagination__link">6</a>
+                            </li>
+                            <li class="pagination__item">
+                                <a href="#" class="pagination__link">7</a>
+                            </li>
+                        </ul>
+                    </div>
+
+                </div>
+            </section>
+            <section class="about">
+                <div class="container about__container">
+                    <img src="#" alt="about us" class="about__img">
+                    <div class="about__content">
+                        <h3 class="title about__title">О нас</h3>
+                        <img src="#" alt="about us" class="about__pic">
+                        <p class="about__desc">
+                            Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних условиях. 
+                        </p>
+                        <a href="#" class="about__button button">Подробнее</a>
+                    </div>
+                </div>
+            </section>
         </main>
         <footer class="footer">
             <div class="container footer__container">
