--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="wrapper">
-        <div class="wrapper_content">
+        <div class="wrapper__content">
             <header class="header">
                 <div class="container header__container">
                     <a class="logo" href="#">
@@ -35,17 +35,17 @@
                     </address>
                 </div>
             </header>
-        </div>
-        <main class="maincontent">
-            <section class="hello">
+        
+            <main class="maincontent">
+                <section class="hello">
                 <div class="container hello__container">
                     <h1 class="hello__title">Авторские туры по Азии</h1>
                     <div class="hello__text">Открой для себя Азию</div>
                     <a href="#" class="hello__button button">Подробнее</a>
                 </div>
 
-            </section>
-            <section class="offers">
+                </section>
+                <section class="offers">
                 <div class="container offers__container">
                     <h2 class="title title--fire">Горящие туры</h2>
                     <ul class="offers__list">
@@ -66,7 +66,7 @@
                                 <p class="offers__text">Равным образом постоянное обеспечение нашей деятельности позволяет оценить значение систем массового участия.
 
                                 </p>
-                                <a href="" class="button--light">Смотреть</a>
+                                <a href="" class="button--light button">Смотреть</a>
 
                             </div>
                         </li>
@@ -87,7 +87,7 @@
                                 <p class="offers__text">Равным образом постоянное обеспечение нашей деятельности позволяет оценить значение систем массового участия.
 
                                 </p>
-                                <a href="#" class="button--light">Смотреть</a>
+                                <a href="#" class="button--light button">Смотреть</a>
 
                             </div>
                         </li>
@@ -108,28 +108,32 @@
                                 <p class="offers__text">Равным образом постоянное обеспечение нашей деятельности позволяет оценить значение систем массового участия.
 
                                 </p>
-                                <a href="#" class="button--light">Смотреть</a>
+                                <a href="#" class="button--light button">Смотреть</a>
 
                             </div>
                         </li>
                     </ul>
                 </div>
-            </section>
-            <section class="news">
-                <h3 class="title news__title">Новости и акции</h3>
+                </section>
+                <section class="news">
                 <div class="container news__container">
+                    <h3>Новости и акции</h3>
                     <ul class="news__list">
                         <li class="news__item">
                             <img src="#" alt="flight" class="news__img">
-                            <div class="news__date">Декабрь 2019</div>
-                            <h4 class="news__subtitle">Дешевые путевки на Новый Год!</h4>
-                            <div class="news__text">Проведи новый год в Тайланде</div>
+                            <div class="news__content">
+                                <div class="news__date">Декабрь 2019</div>
+                                <h4 class="news__subtitle">Дешевые путевки на Новый Год!</h4>
+                                <div class="news__text">Проведи новый год в Тайланде</div>
+                            </div>
                         </li>
                         <li class="news__item">
                             <img src="#" alt="flight" class="news__img">
-                            <div class="news__date">Декабрь 2019</div>
-                            <h4 class="news__subtitle">Акция для серфенгистов!</h4>
-                            <div class="news__text">В сезон больших волн скидка на путевку в Тайланд на остров серфенгистов. Удачного пути!</div>
+                            <div class="news__content news--con">
+                                <div class="news__date">Декабрь 2019</div>
+                                <h4 class="news__subtitle">Акция для серфенгистов!</h4>
+                                <div class="news__text">В сезон больших волн скидка на путевку в Тайланд на остров серфенгистов. Удачного пути!</div>
+                            </div>
                         </li>
                     </ul>
                     <div class="pagination">
@@ -162,8 +166,8 @@
                     </div>
 
                 </div>
-            </section>
-            <section class="about">
+                </section>
+                <section class="about">
                 <div class="container about__container">
                     <img src="#" alt="about us" class="about__img">
                     <div class="about__content">
@@ -175,8 +179,9 @@
                         <a href="#" class="about__button button">Подробнее</a>
                     </div>
                 </div>
-            </section>
-        </main>
+                </section>
+            </main>
+        </div>
         <footer class="footer">
             <div class="container footer__container">
                 <a class="logo" href="#">
@@ -195,32 +200,32 @@
                         </li>
                     </ul>
                 </nav>
+                <ul class="socials">
+                    <li class="socials__item">
+                        <a href="#" class="socials__link">
+                            <img src="#" alt="telegram" class="socials__img">
+                        </a>
+                    </li>
+                    <li class="socials__item">
+                        <a href="#" class="socials__link">
+                            <img src="#" alt="vk" class="socials__img">
+                        </a>
+                    </li>
+                    <li class="socials__item">
+                        <a href="#" class="socials__link">
+                            <img src="#" alt="facebook" class="socials__img">
+                        </a>
+                    </li>
+                    <li class="socials__item">
+                        <a href="#" class="socials__link">
+                            <img src="#" alt="instagram" class="socials__img">
+                        </a>
+                    </li>
+                </ul>
                 <address class="contacts">
                     <a href="tel:+78007003030" class="contacts__phone">8 800 700 30 30</a>
                     <div class="contacts__call">Бесплатный звонок по России</div>
                 </address>
-                <ul class="messenger">
-                    <li class="messenger__telegram">
-                        <a href="#" class="messenger__telegram">
-                            <img src="#" alt="telegram" class="messenger__telegram--img">
-                        </a>
-                    </li>
-                    <li class="messenger__vk">
-                        <a href="#" class="messenger__vk">
-                            <img src="#" alt="vk" class="messenger__vk--img">
-                        </a>
-                    </li>
-                    <li class="messenger__facebook">
-                        <a href="#" class="messenger__facebook">
-                            <img src="#" alt="facebook" class="messenger__facebook--img">
-                        </a>
-                    </li>
-                    <li class="messenger__instagram">
-                        <a href="#" class="messenger__instagram">
-                            <img src="#" alt="instagram" class="messenger__instagram--img">
-                        </a>
-                    </li>
-                </ul>
             </div>
         </footer>
     </div>
