--- a/my Project/index.html
+++ b/my Project/index.html
@@ -15,7 +15,7 @@
     <div class="wrapper main_page_wrapper">
         <div class="wrapper__content">
             <div class="container">
-                <header class="header">
+                <header class="header"> <div class="container header__container">
                     <a class="logo logo_header" href="#">
                         <img class="logo__img" src="./img/лого.png" alt="logo company">
                     </a>
@@ -35,7 +35,7 @@
                     <address class="contacts contacts_header">
                         <a href="tel:+78007003030" class="contacts__phone">8 800 700 30 30</a>
                         <div class="contacts__info">График работы</div>
-                    </address>
+                    </address> </div>
                 </header>
             </div>
 
@@ -44,7 +44,7 @@
                     <div class="container hello__container">
                         <h1 class="hello__title">Авторские туры по Азии</h1>
                         <div class="hello__text">Открой для себя Азию</div>
-                        <a href="#" class="hello__button button">Подробнее</a>
+                        <a href="#" class="hello__button button button_type_primary">Подробнее</a>
                     </div>
                 </section>
 
@@ -98,7 +98,7 @@
                                     <p class="offers__text">Равным образом постоянное обеспечение нашей деятельности
                                         позволяет оценить значение систем массового участия.
                                     </p>
-                                    <a href="#" class=" button">Смотреть</a>
+                                    <a href="#" class=" button button_type_primary button--light">Смотреть</a>
                                 </div>
                             </li>
                             <li class="offers__item">
@@ -182,21 +182,19 @@
                 </section>
                 <section class="about">
                     <div class="container about__container">
-                        <div class="about__deck">
-                            <img src="./img/gates.png" alt="about us" class="about__img">
-                            <div class="about__content">
-                                <h3 class="title about__title">О нас</h3>
-                                <img src="./img/mountains.jpg" alt="about us" class="about__pic">
-                                <div class="about__text">
-                                    <p>
-                                        Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько
-                                        абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору
-                                        отточить навык публичных выступлений в домашних условиях.
-                                    </p>
-                                </div>
-                                <a href="#" class="about__button button">Подробнее</a>
+                        
+                        <div class="about__content">
+                            <h3 class="title about__title">О нас</h3>
+                            <div class="about__text">
+                                <p>
+                                    Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько
+                                    абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору
+                                    отточить навык публичных выступлений в домашних условиях.
+                                </p>
                             </div>
+                            <a href="#" class="button button_type_primary">Подробнее</a>
                         </div>
+                        
                     </div>
                 </section>
             </main>
@@ -222,22 +220,22 @@
                 <ul class="socials">
                     <li class="socials__item socials__item_icon_tel">
                         <a href="#" class="socials__link">
-                            <img src="./img/telegram.jpg" alt="telegram" class="socials__img">
+                            <img src="./img/telegram.png" alt="telegram" class="socials__img">
                         </a>
                     </li>
                     <li class="socials__item socials__item_icon_vk">
                         <a href="#" class="socials__link">
-                            <img src="./img/vk.jpg" alt="vk" class="socials__img">
+                            <img src="./img/vk.png" alt="vk" class="socials__img">
                         </a>
                     </li>
                     <li class="socials__item socials__item_icon_f">
                         <a href="#" class="socials__link">
-                            <img src="./img/f.jpg" alt="facebook" class="socials__img">
+                            <img src="./img/f.png" alt="facebook" class="socials__img">
                         </a>
                     </li>
                     <li class="socials__item socials__item_icon_inst">
                         <a href="#" class="socials__link">
-                            <img src="./img/in.jpg" alt="instagram" class="socials__img">
+                            <img src="./img/in.png" alt="instagram" class="socials__img">
                         </a>
                     </li>
                 </ul>
