--- a/Project/index.html
+++ b/Project/index.html
@@ -26,7 +26,7 @@
                                     <a href="#" class="menu__link">Главная</a>
                                 </li>
                                 <li class="menu__item">
-                                    <a href="#" class="menu__link">Услуги</a>
+                                    <a href="./servis.html" class="menu__link">Услуги</a>
                                 </li>
                                 <li class="menu__item">
                                     <a href="#" class="menu__link">Отзывы</a>
@@ -222,7 +222,7 @@
                                 <a href="#" class="menu__link">Главная</a>
                             </li>
                             <li class="menu__item">
-                                <a href="#" class="menu__link">Услуги</a>
+                                <a href="./servis.html" class="menu__link">Услуги</a>
                             </li>
                             <li class="menu__item">
                                 <a href="#" class="menu__link">Отзывы</a>
