--- a/Project/index.html
+++ b/Project/index.html
@@ -17,13 +17,13 @@
             <div class="container header__container">
                 <header class="header"> 
                     <div class="header__col">
-                        <a class="logo logo_header" href="#">
+                        <a class="logo logo_header" href="/">
                             <img class="logo__img" src="./img/лого.png" alt="logo company">
                         </a>
                         <nav class="menu">
                             <ul class="menu__list">
                                 <li class="menu__item menu__item_active">
-                                    <a href="#" class="menu__link">Главная</a>
+                                    <a href="/" class="menu__link">Главная</a>
                                 </li>
                                 <li class="menu__item">
                                     <a href="./servis.html" class="menu__link">Услуги</a>
@@ -211,15 +211,15 @@
             </main>
         </div>
         <footer class="footer">
-            <div class="container footer__container">
+            <div class="container footer__container footer__container_section">
                 <div class="footer__col">
-                    <a class="logo" href="#">
+                    <a class="logo" href="/">
                         <img class="logo__img" src="./img/лого.png" alt="logo company">
                     </a>
                     <nav class="menu">
                         <ul class="menu__list">
                             <li class="menu__item">
-                                <a href="#" class="menu__link">Главная</a>
+                                <a href="/" class="menu__link">Главная</a>
                             </li>
                             <li class="menu__item">
                                 <a href="./servis.html" class="menu__link">Услуги</a>
