--- a/Project/servis.html
+++ b/Project/servis.html
@@ -16,16 +16,16 @@
             <div class="container top-line__container">
                 <header class="header top-line_header"> 
                     <div class="header__col">
-                        <a class="logo logo_header" href="#">
+                        <a class="logo logo_header" href="/">
                             <img class="logo__img" src="./img/лого.png" alt="logo company">
                         </a>
                         <nav class="menu">
                             <ul class="menu__list">
-                                <li class="menu__item menu__item_active">
-                                    <a href="#" class="menu__link">Главная</a>
-                                </li>
                                 <li class="menu__item">
-                                    <a href="#" class="menu__link">Услуги</a>
+                                    <a href="/" class="menu__link">Главная</a>
+                                </li>
+                                <li class="menu__item menu__item_active">
+                                    <a href="./servis.html" class="menu__link">Услуги</a>
                                 </li>
                                 <li class="menu__item">
                                     <a href="#" class="menu__link">Отзывы</a>
@@ -70,7 +70,7 @@
                                         а начинающему оратору отточить навык публичных выступлений в домашних условиях. При создании генератора мы использовали небезизвестный универсальный код речей. 
                                     </p>
                                 </div>
-                                <div class="button button--light">Подробнее</div>
+                                <div class="button button--light button_service">Подробнее</div>
                             </div>
                         </a>
                     </li>
@@ -87,13 +87,13 @@
                                         а начинающему оратору отточить навык публичных выступлений в домашних условиях. При создании генератора мы использовали небезизвестный универсальный код речей. 
                                     </p>
                                 </div>
-                                <div class="button button--light">Подробнее</div>
+                                <div class="button button--light button_services">Подробнее</div>
                             </div>
                         </a>
                     </li>
                 </ul>
                 <div class="pagination pagination_theme_light">
-                    <div class="pagination__display">
+                    <div class="pagination__display pagination__display_light">
                         Страница 1 из 7
                     </div>
                     <ul class="pagination__list">
@@ -172,49 +172,53 @@
         <footer class="inner-footer">
             <div class="container">
                 <footer class="footer">
-                    <div class="container footer__container">
-                        <a class="logo" href="#">
-                            <img class="logo__img" src="./img/лого.png" alt="logo company">
-                        </a>
-                        <nav class="menu">
-                            <ul class="menu__list">
-                                <li class="menu__item">
-                                    <a href="#" class="menu__link">Главная</a>
+                    <div class="container footer__container footer__container_services">
+                        <div class="footer__col">
+                            <a class="logo" href="/">
+                                <img class="logo__img" src="./img/лого.png" alt="logo company">
+                            </a>
+                            <nav class="menu">
+                                <ul class="menu__list">
+                                    <li class="menu__item">
+                                        <a href="/" class="menu__link">Главная</a>
+                                    </li>
+                                    <li class="menu__item">
+                                        <a href="./servis.html" class="menu__link">Услуги</a>
+                                    </li>
+                                    <li class="menu__item">
+                                        <a href="#" class="menu__link">Отзывы</a>
+                                    </li>
+                                </ul>
+                            </nav>
+                        </div>
+                        <div class="footer__col footer__col_align_right">
+                            <ul class="socials">
+                                <li class="socials__item socials__item_icon_tel">
+                                    <a href="#" class="socials__link">
+                                        <img src="./img/telegram.png" alt="telegram" class="socials__img">
+                                    </a>
                                 </li>
-                                <li class="menu__item">
-                                    <a href="#" class="menu__link">Услуги</a>
+                                <li class="socials__item socials__item_icon_vk">
+                                    <a href="#" class="socials__link">
+                                        <img src="./img/vk.png" alt="vk" class="socials__img">
+                                    </a>
                                 </li>
-                                <li class="menu__item">
-                                    <a href="#" class="menu__link">Отзывы</a>
+                                <li class="socials__item socials__item_icon_f">
+                                    <a href="#" class="socials__link">
+                                        <img src="./img/f.png" alt="facebook" class="socials__img">
+                                    </a>
+                                </li>
+                                <li class="socials__item socials__item_icon_inst">
+                                    <a href="#" class="socials__link">
+                                        <img src="./img/in.png" alt="instagram" class="socials__img">
+                                    </a>
                                 </li>
                             </ul>
-                        </nav>
-                        <ul class="socials">
-                            <li class="socials__item socials__item_icon_tel">
-                                <a href="#" class="socials__link">
-                                    <img src="./img/telegram.png" alt="telegram" class="socials__img">
-                                </a>
-                            </li>
-                            <li class="socials__item socials__item_icon_vk">
-                                <a href="#" class="socials__link">
-                                    <img src="./img/vk.png" alt="vk" class="socials__img">
-                                </a>
-                            </li>
-                            <li class="socials__item socials__item_icon_f">
-                                <a href="#" class="socials__link">
-                                    <img src="./img/f.png" alt="facebook" class="socials__img">
-                                </a>
-                            </li>
-                            <li class="socials__item socials__item_icon_inst">
-                                <a href="#" class="socials__link">
-                                    <img src="./img/in.png" alt="instagram" class="socials__img">
-                                </a>
-                            </li>
-                        </ul>
-                        <address class="contacts contacts_footer">
-                            <div class="contacts__call">Бесплатный звонок по России</div>
-                            <a href="tel:+78007003030" class="contacts__phone">8 800 700 30 30</a>
-                        </address>
+                            <address class="contacts contacts_footer">
+                                <div class="contacts__call">Бесплатный звонок по России</div>
+                                <a href="tel:+78007003030" class="contacts__phone">8 800 700 30 30</a>
+                            </address>
+                        </div>
                     </div>
                 </footer>
             </div>
