--- a/Project/servis.html
+++ b/Project/servis.html
@@ -22,13 +22,13 @@
                         <nav class="menu">
                             <ul class="menu__list">
                                 <li class="menu__item">
-                                    <a href="/" class="menu__link">Главная</a>
+                                    <a href="./index.html" class="menu__link">Главная</a>
                                 </li>
                                 <li class="menu__item menu__item_active">
                                     <a href="./servis.html" class="menu__link">Услуги</a>
                                 </li>
                                 <li class="menu__item">
-                                    <a href="#" class="menu__link">Отзывы</a>
+                                    <a href="./reviews.html" class="menu__link">Отзывы</a>
                                 </li>
                             </ul>
                         </nav>
@@ -180,13 +180,13 @@
                             <nav class="menu">
                                 <ul class="menu__list">
                                     <li class="menu__item">
-                                        <a href="/" class="menu__link">Главная</a>
+                                        <a href="./index.html" class="menu__link">Главная</a>
                                     </li>
                                     <li class="menu__item">
                                         <a href="./servis.html" class="menu__link">Услуги</a>
                                     </li>
                                     <li class="menu__item">
-                                        <a href="#" class="menu__link">Отзывы</a>
+                                        <a href="./reviews.html" class="menu__link">Отзывы</a>
                                     </li>
                                 </ul>
                             </nav>
